# resolver

./: .env.example  .env.tron  .gitignore  .gitmodules  ARCHITECTURE.md  BLOCKERS_APTOS.md  BLOCKERS_ETHERLINK.md  BLOCKERS_TRON.md  COMPLETE_TEST_REPORT.md  CORRECTED_CROSS_CHAIN_FLOW.md  CORRECTED_FLOW.md  CROSS_CHAIN_SWAP_TEST_REPORT.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUMMARY.md  ETHERLINK_README.md  FINAL_EXECUTION_SUMMARY.md  MIGRATION_TO_V2.md  MONAD_TESTNET_INFO.md  README.md  README_APTOS.md  READY_FOR_TESTING.md  REAL_TRANSACTION_REPORT.md  RELAYER_ARCHITECTURE_SUMMARY.md  RELAYER_ORCHESTRATED_COMPLETE.md  RELAYER_SERVICE_ARCHITECTURE.md  TEST_EXECUTION_REPORT.md  TRON_INTEGRATION_README.md  UNITE_README.md  all_deployments.json  auction_deployments.json  deploy_resolver.sh  deploy_simple.ts  deployed_contracts.json  deployment-summary.json  deployments.json  derive_tron_addresses.js  ecosystem.config.js  escrow_factory_deployments.json  extract_deployments.ts  foundry.toml  (+27 more)
contracts/: BLOCKCHAIN_DEV_PROMPTS.md  Escrow.sol  EscrowFactory.sol  HTLCEscrow.sol  LimitOrderProtocol.sol  RelayerEscrow.sol  RelayerEscrowCorrect.sol  ResolverContract.sol  deployments.json  foundry.toml
contracts/aptos/: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Move.toml  README.md  SCRIPTS.md  deployment_log.json  deployments.json  dutch_auction.move.old  escrow_factory.move  funding_results.json  get_address.js  package.json  relayer_contract.move  run-crosschain-test.ts  simple_escrow.move  tsconfig.json  vitest.config.ts
contracts/bitcoin/: .eslintrc.js  README.md  jest.config.js  package.json  tsconfig.json
contracts/cardano/: .env.example  .gitignore  README.md  aiken.toml  deployments.json  jest.config.js  package.json  plutus.json  setup.sh  tsconfig.json  vitest.config.ts
contracts/counter/: aiken.toml
contracts/eos/: .gitignore  CMakeLists.txt  README.md  STATUS.md  counter.abi  create_basic_wasm.js  generate_testnet_keys.js  package.json  tsconfig.json
contracts/eos/include/: counter.hpp
contracts/eos/scripts/: create_accounts.sh  create_test_users.ts  deploy.ts  generate_keys.ts  interact.ts  run_tests.ts  test_connection.ts
contracts/eos/src/: counter.cpp
contracts/eos/tests/: counter.test.ts  infrastructure.test.ts  test_config.ts
contracts/evm-partial/: CROSS_CHAIN_TRANSACTION_FLOW.md  DEPLOYMENT_SUMMARY.md  batch_deploy.sh  chain_ids.txt  deploy_all_chains.sh  foundry.toml  (+8 more)
contracts/neutron/: Cargo.toml  Makefile  README.md
contracts/neutron/contracts/counter/: Cargo.toml
contracts/neutron/contracts/counter/examples/: schema.rs
contracts/neutron/contracts/counter/src/: contract.rs  msg.rs
contracts/neutron/scripts/: deploy.ts  generate-wallet.js  generate-wallet.ts  interact.ts
contracts/osmosis/: .env.example  .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
contracts/osmosis/contracts/counter/: Cargo.toml
contracts/osmosis/contracts/counter/src/: contract.rs  error.rs  msg.rs
contracts/osmosis/contracts/test-token/: Cargo.toml
contracts/osmosis/contracts/test-token/src/: contract.rs  error.rs  msg.rs
contracts/osmosis/contracts/unite-escrow/: Cargo.toml
contracts/osmosis/contracts/unite-escrow-factory/: Cargo.toml
contracts/osmosis/contracts/unite-escrow-factory/src/: msg.rs  state.rs
contracts/osmosis/contracts/unite-escrow/src/: contract.rs  error.rs  msg.rs  state.rs  types.rs
contracts/osmosis/contracts/unite-order-protocol/: Cargo.toml
contracts/osmosis/contracts/unite-order-protocol/src/: contract.rs  error.rs  lib.rs  msg.rs  order_hash.rs  state.rs  types.rs
contracts/osmosis/contracts/unite-resolver/: Cargo.toml
contracts/osmosis/contracts/unite-resolver/src/: contract.rs  dutch_auction.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs
contracts/osmosis/scripts/: check-all.ts  deploy-all.ts  deploy-testnet.ts  deploy_cli.sh  deploy_local.ts  deploy_testnet.ts  fund-all.ts  generate-wallet.ts  generate_wallet.ts  mint-test-tokens.ts  setup-cross-chain.ts  test-full-flow.ts  test-integration.ts
contracts/osmosis/tests/: counter.test.ts  cross-chain-swap.test.ts  osmosis-cross-chain.test.ts  setup.ts
contracts/polkadot/counter/: .gitignore  Cargo.toml  lib.rs
docs/: TEST_RESULTS.md  UNITE_README.md
evm/: deployments_main.json  foundry.toml  jest.setup.js  run_test.sh
script/: DeployMonadBase.s.sol  DeployRelayerService.s.sol  TestCrosschainSwap.s.sol
scripts/: README.md  approve_tokens.ts  auto_deploy.sh  check-balances.ts  check_actual_balances.ts  check_all_addresses.ts  check_auction_state.ts  check_balances.ts  check_funded_wallet.ts  check_funding_txs.ts  check_gas_balance.ts  check_transactions.ts  check_tron_balances.js  check_tx_details.ts  check_tx_status.ts  check_wallets.ts  check_with_alchemy.ts  complete-flow.js  complete_auction_flow.ts  correct-flow-test.js  create_new_wallet.ts  deploy-contracts.js  deploy.sh  deploy_all.sh  deploy_all_contracts.ts  deploy_all_real.ts  deploy_and_test.js  deploy_and_test.ts  deploy_arbitrum_contracts.ts  deploy_base_contracts.ts  deploy_contracts.ts  deploy_crosschain_auction.ts  deploy_crosschain_contracts.ts  deploy_escrow_factory.ts  deploy_escrow_infrastructure.ts  deploy_mock_factory.ts  deploy_mock_relayer.ts  deploy_relayer_contract.ts  deploy_relayer_contracts.ts  deploy_simple.js  (+46 more)
service/: README.md  README_SDK_INTEGRATION.md  enhanced_sqs_resolver.ts  package.json  polling_resolver.ts  retry-committed-orders.ts  sqs_listener_service.ts  test_direct_sqs.ts  test_mock_order.ts  tsconfig.json  tsconfig.ts-node.json
services/: base_sepolia_test.ts  cross_chain_resolver.ts  cross_chain_resolver_service.ts  crosschain_resolver.ts  edge_case_tester.ts  enhanced_sqs_resolver.ts  integrated_gasless_resolver.ts  orchestrator.ts  sqs_listener_service.ts  sqs_resolver_example.ts
src/: RelayerContract.sol
test/: SwapFlowDemo.t.sol
test/near/temp_basic/: Cargo.toml
testing/: config.ts  extract_deployments.ts
tests/: config.ts  dutch-auction.spec.ts  dutch-auction.test.ts
(+718 files in other folders)
