[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Unite DeFi Team"]
edition = "2021"

[workspace.dependencies]
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"