[package]
name = "counter"
version = "0.1.0"
authors = ["Unite DeFi"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "4.3.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false
lto = true

[profile.dev]
overflow-checks = false