[package]
name = "unite-near-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
borsh = { version = "1.0", features = ["derive"] }

# Dev dependencies commented out for deployment
# [dev-dependencies]
# near-sdk-sim = "4.0.0-pre.9"
# near-crypto = "0.25.0"
# near-primitives = "0.25.0"
# tokio = { version = "1.45.0", features = ["full"] }
# near-workspaces = "0.14.1"
# futures = "0.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# Build contracts as library
