[package]
name = "unite-order-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Unite Order Protocol for cross-chain swaps on Osmosis"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
cw-multi-test = "0.18"
